--- a/frontend/src/resources/themes/coop/styles/index.scss
+++ b/frontend/src/resources/themes/coop/styles/index.scss
@@ -62,4 +62,9 @@ body
      * The width of the border of inputs.
      */
     --input-border-width: var(--border-width-thin);
+
+    /**
+     * The label color, set in temp.scss.
+     */
+    --temp-label-color: #665555;
 }
