--- a/frontend/src/resources/themes/mover/styles/index.scss
+++ b/frontend/src/resources/themes/mover/styles/index.scss
@@ -69,6 +69,11 @@ body
      * The width of the border of inputs.
      */
     --input-border-width: var(--border-width-thin);
+
+    /**
+     * The label color, set in temp.scss.
+     */
+    --temp-label-color: #606060;
 }
 
 dropdown-icon
@@ -97,21 +102,6 @@ page-content page-footer,
 page-content page-header,
 {
     padding: 24rem 28rem !important;
-}
-
-html
-{
-    page-sidebar
-    {
-        .input-heading > *,
-        .input-description > *,
-        .toggle-heading > *,
-        .toggle-description > *
-        {
-            opacity: 0.9 !important;
-            color: inherit !important;
-        }
-    }
 }
 
 html page-sidebar page-section:not(.--header-slot-empty) .page-section-header
