--- a/frontend/src/shared/framework/components/controls/inputs/input.scss
+++ b/frontend/src/shared/framework/components/controls/inputs/input.scss
@@ -205,10 +205,6 @@
 
         // Only shown if the `label` attribute is specified.
         display: none;
-
-        // Ensure the label, and any info popovers it may contain,
-        // appears above the control itself.
-        z-index: 1;
     }
 
     &.--open:focus-within > .input-label
